// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /api/editors/mesures it return date_nomination error 1`] = `
Object {
  "errors": Array [
    Object {
      "location": "body",
      "msg": "date_nomination must be after or equivalent to date_premier_mesure",
      "param": "date_nomination",
      "value": "2020-01-01",
    },
  ],
}
`;

exports[`POST /api/editors/mesures it returns 201 1`] = `
Object {
  "annee_naissance": "1989",
  "antenne_id": null,
  "cause_sortie": "dessaisissement_famille",
  "civilite": "monsieur",
  "code_postal": "89350",
  "created_at": "2020-08-26",
  "date_fin_mesure": "2020-04-04",
  "date_nomination": "2020-01-11",
  "date_premier_mesure": "2020-01-10",
  "date_protection_en_cours": "2020-01-11",
  "etats": Array [
    Object {
      "champ_mesure": "protection_bien",
      "code_postal": "89000",
      "date_changement_etat": "2020-01-05",
      "etablissement_siret": "",
      "id": 1,
      "lieu_vie": "domicile",
      "nature_mesure": "curatelle_simple",
      "pays": "FR",
      "type_etablissement": null,
      "ville": "auxerre",
    },
    Object {
      "champ_mesure": "protection_bien",
      "code_postal": "89350",
      "date_changement_etat": "2020-01-06",
      "etablissement_siret": "",
      "id": 2,
      "lieu_vie": "domicile",
      "nature_mesure": "curatelle_simple",
      "pays": "FR",
      "type_etablissement": null,
      "ville": "perrigny",
    },
  ],
  "id": 6,
  "latitude": null,
  "lieu_vie": "domicile",
  "longitude": null,
  "numero_dossier": "45656456",
  "numero_rg": "RG234534534",
  "pays": "FR",
  "ressources": Array [],
  "resultat_revision": null,
  "type_etablissement": null,
  "ville": "perrigny",
}
`;

exports[`POST /api/editors/mesures it returns date_protection_en_cours error 1`] = `
Object {
  "errors": Array [
    Object {
      "location": "body",
      "msg": "date_nomination must be before or equivalent to date_protection_en_cours",
      "param": "date_nomination",
      "value": "2020-01-11",
    },
    Object {
      "location": "body",
      "msg": "champ_mesure is required",
      "param": "etats[0].champ_mesure",
    },
    Object {
      "location": "body",
      "msg": "champ_mesure is required",
      "param": "etats[1].champ_mesure",
    },
  ],
}
`;
